--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     margin: 120px auto;
     text-align:left;
 }
-@media only screen and(orientation:potrait){
+@media only screen and(max-width:375px){
     .container{
         display: grid;
         grid-template-columns: auto ;
