--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@ body{
 }
 .container{
     display: grid;
-    grid-template-columns: auto auto auto ;
+    grid-template-columns: auto ;
     gap:0;
     justify-content: center;
-    margin: 120px auto;
+    margin: 7.5rem auto;
     text-align:left;
+    align-items: center;
 }
 
 img{
@@ -27,10 +28,10 @@ h1{
 }
 .sedans{
     height: 450px;
-    width: 280px;
+    width: 290px;
     background-color:hsl(31, 77%, 52%);
     border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
     color: hsla(0, 0%, 100%, 0.75);
@@ -51,7 +52,7 @@ h1{
     height: 450px;
     width: 290px;
     background-color:hsl(179, 100%, 13%);
-    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     font-family: 'Lexend Deca', sans-serif;
     font-weight: 400;
@@ -97,4 +98,23 @@ button{
     border: 2px solid hsl(0, 0%, 95%);
     background-color: hsl(179, 100%, 13%);
     color: hsl(0, 0%, 95%);
+}
+
+@media screen and (min-width:960px){
+    .container{
+        grid-template-columns: auto auto auto ;
+        gap:0;
+        justify-content: center;
+    }
+    .sedans{
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+        border-top-right-radius: 0;
+    }
+    .luxury{
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 0;
+    }
+    
 }
