--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
 }
 body{
     background-color: hsl(0, 0%, 95%);
+    min-height:100vh; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .container{
     display: grid;
@@ -25,6 +30,7 @@ h1{
     padding-left: 50px;
     font-family: 'Big Shoulders Display', cursive;
     font-weight: 700;
+    text-transform: uppercase;
 }
 .sedans{
     height: 450px;
